--- a/lang/en.json
+++ b/lang/en.json
@@ -145,6 +145,7 @@
   },
   "error": {
     "pageNotFound": "This page could not be found",
+    "escortNotFound": "This escort could not be found",
     "youWillBeRedirected": "You will be redirected to the home page",
     "unauthorized": "Unauthorized",
     "unauthenticated": "Unauthenticated",
