--- a/lang/es.json
+++ b/lang/es.json
@@ -145,6 +145,7 @@
   },
   "error": {
     "pageNotFound": "Esta página no se pudo encontrar",
+    "escortNotFound": "Esta escort no se pudo encontrar",
     "youWillBeRedirected": "Serás redirigido a la página de inicio",
     "unauthorized": "No autorizado",
     "unauthenticated": "No autenticado",
